<resources>
    <string name="app_name">TCT calc</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>
    <string name="about_text">
        Калькулятор для помощи в судействе соревнований по технике спортивного туризма. Пересчитывает время дистанции с учетом штрафов и суммирует время участников комманды.\n\n
        Версия 2.0.\n
        Создал Кислица Сергей.\n\nИзменения версии 2.0:\n
        -Добавлено суммирование времени;\n
        -Вместо миллисекунд теперь сотые;\n
        -По кнопке ВВОД курсор переходит на следующее значение (кроме цены штрафа);\n
        -По кнопке СБРОС курсор переходит на первую позицию.</string>
    <string name="button_ok">OK</string>

    <string name="tab_penalty">Штрафы</string>
    <string name="tab_time">Время</string>

    <string name="button_cancel">Сброс</string>
    <string name="button_result">Посчитать</string>

    <string name="string_minutes">Минуты</string>
    <string name="string_seconds">Секунды</string>
    <string name="string_millis">Сотые</string>

    <string name="string_penalty_sec">Штраф = сек</string>
    <string name="string_sum_penalty">Сумма штрафов</string>

    <string name="string_distance_time">Время дистанции</string>
    <string name="string_first_member">Первый участник</string>
    <string name="string_second_member">Второй участник</string>

    <string name="string_result_penalty">Результат (время с учетом штрафов)</string>
    <string name="string_result_time">Результат (время первого + время второго)</string>

    <string name="field_result">&#8230;нажмите посчитать&#8230;</string>

    <string name="digit_0">0</string>
    <string name="digit_5">5</string>
</resources>
